[SYNC] Develop to Master (#364)
* if price is 0, exclude from dataset (#174)

* if price is 0, exclude from dataset

* removed .DS_Store

* added generated files

* removed incorrect files (#176)

* Revert "[S73] Feature: Per-Instance Artifactories Module (#210)" (#214)

This reverts commit 71471b7174740ba1ce3b8f76b985e7b007135de6.

* if price is 0, exclude from dataset (#174)

* if price is 0, exclude from dataset

* removed .DS_Store

* added generated files

* removed incorrect files (#176)

* [S73] Feature: Per-Instance Artifactories Module (#210)

* Added artifactories facets modules

* added schema

* updated spec

* changed type to string

* updated to null

* introduced indentation

* updated spec

* updated spec to have include_all false as default

* updated type from bool to boolean

* Revert "[S73] Feature: Per-Instance Artifactories Module (#210)" (#214)

This reverts commit 71471b7174740ba1ce3b8f76b985e7b007135de6.

* [S73] Feature: Per-Instance Artifactories Module (#215)

* Added artifactories facets modules

* added schema

* updated spec

* changed type to string

* updated to null

* introduced indentation

* updated spec

* updated spec to have include_all false as default

* updated type from bool to boolean

* added intent level output

* Artifactories Terraform Module (#228)

* added artifactories module

* updates to vault module

* removed facets yaml outputs

* added gitignore files

* Cleaned up ignored files

* Cleaned up ignored files

* Cleaned up ignored files

* added artifactories module

* updated to vault facets.yaml

* terraform fmt

* deleted zip_modules.py

* updated module source

* updated to work with github app

(cherry picked from commit 122c9dc28b355bfe612e98f026decf2195beb507)

* Innersourcing workflows (#230)

* added zip modules py

* updated the print statement

* modified the print message in zip_modules.py

* Implement concurrent zipping and uploading to S3 in zip_modules.py

* Update publish workflow to run 

--- a/modules/config_map/k8s/0.3/facets.yaml
+++ b/modules/config_map/k8s/0.3/facets.yaml
@@ -1,11 +1,12 @@
 intent: config_map
 flavor: k8s
 version: '0.3'
+description: "config_map - k8s"
 clouds:
-  - aws
-  - azure
-  - gcp
-  - kubernetes
+- aws
+- azure
+- gcp
+- kubernetes
 spec:
   type: object
   properties:
@@ -14,19 +15,20 @@ spec:
       type: object
       description: Data objects containing key, value pair
       patternProperties:
-        keyPattern: "^[a-zA-Z0-9_.-]*$"
-        title: Data Object Block
-        description: something
-        type: object
-        properties:
-          key:
-            title: ConfigMap Data Key Name
-            description: Key name of the configmap object
-            type: string
-          value:
-            title: ConfigMap Data Object Value
-            description: Value of the configmap object
-            type: textarea
+        "^[a-zA-Z0-9_.-]*$":
+          title: Data Object Block
+          description: something
+          type: object
+          properties:
+            key:
+              title: ConfigMap Data Key Name
+              description: Key name of the configmap object
+              type: string
+            value:
+              title: ConfigMap Data Object Value
+              description: Value of the configmap object
+              type: string
+              x-ui-textarea: true
 sample:
   $schema: >-
     https://facets-cloud.github.io/facets-schemas/schemas/config_map/config_map.schema.json
