--- a/modules/ecs_service/default/0.2/facets.yaml
+++ b/modules/ecs_service/default/0.2/facets.yaml
@@ -1,8 +1,9 @@
 intent: ecs_service
 flavor: default
-version: 0.2
+version: '0.2'
+description: "ecs_service - default"
 clouds:
-  - aws
+- aws
 artifact_inputs:
   primary:
     attribute_path: "spec.release.image"
@@ -32,33 +33,38 @@ spec:
           x-ui-override-disable: true
           description: Port mappings
           patternProperties:
-            keyPattern: "^[0-9]+[m]?$"
-            type: object
-            title: Port Name
-            description: Define port allocation to facilitate communication with service
-            properties:
-              port:
-                type: string
-                title: Port
-                description: Port on which application is running
-                pattern: "^(?!0$)([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$"
-                x-ui-placeholder: "Enter the port number to expose for your application container"
-                x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1-65535"
-              service_port:
-                type: string
-                title: Service Port
-                description: Port from which application service can be exposed
-                pattern: "^(?!0$)([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$"
-                x-ui-placeholder: "Enter the port number to expose for your application service"
-                x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1-65535"
-              protocol:
-                type: string
-                title: Protocol
-                description: TCP or UDP
-                enum:
+            "^[0-9]+[m]?$":
+              type: object
+              title: Port Name
+              description: Define port allocation to facilitate communication with
+                service
+              properties:
+                port:
+                  type: string
+                  title: Port
+                  description: Port on which application is running
+                  pattern: "^(?!0$)([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$"
+                  x-ui-placeholder: "Enter the port number to expose for your application
+                    container"
+                  x-ui-error-message: "Value doesn't match pattern, it should be number
+                    ranging from 1-65535"
+                service_port:
+                  type: string
+                  title: Service Port
+                  description: Port from which application service can be exposed
+                  pattern: "^(?!0$)([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$"
+                  x-ui-placeholder: "Enter the port number to expose for your application
+                    service"
+                  x-ui-error-message: "Value doesn't match pattern, it should be number
+                    ranging from 1-65535"
+                protocol:
+                  type: string
+                  title: Protocol
+                  description: TCP or UDP
+                  enum:
                   - tcp
                   - udp
-            required:
+              required:
               - protocol
               - port
         size:
@@ -79,16 +85,16 @@ spec:
           x-ui-override-disable: true
           description: Command-line arguments for the container
           patternProperties:
-            keyPattern: "^[a-zA-Z0-9_-]+$"
-            type: object
-            title: Argument Name
-            description: Define command-line arguments for the container
-            properties:
-              argument:
-                type: string
-                title: Argument
-                description: Command-line argument value
-            required:
+            "^[a-zA-Z0-9_-]+$":
+              type: object
+              title: Argument Name
+              description: Define command-line arguments for the container
+              properties:
+                argument:
+                  type: string
+                  title: Argument
+                  description: Command-line argument value
+              required:
               - argument
         readonly_root_filesystem:
           type: boolean
@@ -100,8 +106,12 @@ spec:
         registry_name:
           title: Registry Name
           type: string
-          description: "Container Registry Name. <br>Note: To pull images from an ECR in another AWS account, ensure that the source ECR repository is shared with your account by updating its repository policy to allow cross-account access.</br>"
-          x-ui-placeholder: "[Optional] Specify only if using an image from custom container registry"
+          description: "Container Registry Name. <br>Note: To pull images from an
+            ECR in another AWS account, ensure that the source ECR repository is shared
+            with your account by updating its repository policy to allow cross-account
+            access.</br>"
+          x-ui-placeholder: "[Optional] Specify only if using an image from custom
+            container registry"
           x-ui-typeable: true
           x-ui-api-source:
             endpoint: "/cc-ui/v1/artifactories"
@@ -123,7 +133,8 @@ spec:
     cloud_permissions:
       type: object
       title: Cloud Permissions
-      description: Assign roles, define access levels, and enforce conditions for managing resource security and compliance
+      description: Assign roles, define access levels, and enforce conditions for
+        managing resource security and compliance
       x-ui-toggle: true
       properties:
         aws:
@@ -134,25 +145,28 @@ spec:
             iam_policies:
               type: object
               title: IAM policies
-              description: Define IAM policies to manage permissions, control-access and secure resources
+              description: Define IAM policies to manage permissions, control-access
+                and secure resources
               patternProperties:
-                keyPattern: "^[a-zA-Z0-9_.-]*$"
-                title: policy_name
-                properties:
-                  arn:
-                    title: ARN
-                    type: string
-                    pattern: '^(arn:aws:iam::(\d{12}|aws):policy\/[A-Za-z0-9+=,.@\-_]+|\$\{[A-Za-z0-9._-]+\})$'
-                    x-ui-placeholder: "IAM policy example. Eg: arn:aws:iam::123456789012:policy/policy1"
-                    x-ui-error-message: "Value doesn't match pattern, accepted value pattern Eg: arn:aws:iam::123456789012:policy/policy1"
-                    x-ui-output-type: "iam_policy_arn"
-                    x-ui-typeable: true
-                required:
+                "^[a-zA-Z0-9_.-]*$":
+                  title: policy_name
+                  properties:
+                    arn:
+                      title: ARN
+                      type: string
+                      pattern: '^(arn:aws:iam::(\d{12}|aws):policy\/[A-Za-z0-9+=,.@\-_]+|\$\{[A-Za-z0-9._-]+\})$'
+                      x-ui-placeholder: "IAM policy example. Eg: arn:aws:iam::123456789012:policy/policy1"
+                      x-ui-error-message: "Value doesn't match pattern, accepted value
+                        pattern Eg: arn:aws:iam::123456789012:policy/policy1"
+                      x-ui-output-type: "iam_policy_arn"
+                      x-ui-typeable: true
+                  required:
                   - arn
+                  type: object
   required:
-    - runtime
-    - release
-    - env
+  - runtime
+  - release
+  - env
 sample:
   kind: "ecs_service"
   flavor: "default"
