--- a/modules/mysql_user/default/0.2/facets.yaml
+++ b/modules/mysql_user/default/0.2/facets.yaml
@@ -14,7 +14,8 @@ inputs:
   kubernetes_details:
     type: "@output/kubernetes"
     displayName: Kubernetes Cluster
-    description: The details of Kubernetes where CRD for managing mysql user will be created
+    description: The details of Kubernetes where CRD for managing mysql user will
+      be created
     optional: false
     default:
       resource_type: kubernetes_cluster
@@ -39,36 +40,36 @@ spec:
       description: Map of permissions that will be provided to the postgres user
       type: object
       patternProperties:
-        keyPattern: "^[a-zA-Z0-9_-]+$"
-        type: object
-        title: Permission
-        description: Permission Object
-        properties:
-          permission:
-            type: string
-            title: Permission
-            description: Permission for the postgres user
-            enum:
-            - RO
-            - RWO
-            - ADMIN
-            - RWC
-            - RWD
-            - RWCT
-          database:
-            type: string
-            title: Database
-            description: Database name where this permission should be given
-            pattern: "\\*|^[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*$"
-          table:
-            type: string
-            title: Table
-            description: Table in the database where this permission should be given
-            patten: "\\*|^[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*$"
-        required:
-        - permission
-        - database
-        - table
+        "^[a-zA-Z0-9_-]+$":
+          type: object
+          title: Permission
+          description: Permission Object
+          properties:
+            permission:
+              type: string
+              title: Permission
+              description: Permission for the postgres user
+              enum:
+              - RO
+              - RWO
+              - ADMIN
+              - RWC
+              - RWD
+              - RWCT
+            database:
+              type: string
+              title: Database
+              description: Database name where this permission should be given
+              pattern: "\\*|^[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*$"
+            table:
+              type: string
+              title: Table
+              description: Table in the database where this permission should be given
+              pattern: "\\*|^[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*$"
+          required:
+          - permission
+          - database
+          - table
   required:
   - permissions
 sample:
