--- a/modules/network/azure_vpc/0.1/facets.yaml
+++ b/modules/network/azure_vpc/0.1/facets.yaml
@@ -1,10 +1,13 @@
 intent: network
 flavor: azure_vpc
-alias-flavors: [ "default" ]
+alias-flavors: ["default"]
 version: "0.1"
 description: Adds network - azure vpc flavor
 clouds:
-  - azure
+- azure
+outputs:
+  default:
+    type: "@outputs/azure_vpc"
 spec:
   title: network
   description: Specification of the network for azure vpc flavor
@@ -16,10 +19,8 @@ spec:
       type: radio
       x-ui-immutable: true
       x-ui-overrides-only: true
-      enum: [
-        { label: Create New VPC, value: create_new_vpc },
-        { label: Use Existing VPC, value: use_existing_vpc }
-      ]
+      enum: [{label: Create New VPC, value: create_new_vpc}, {label: Use Existing
+            VPC, value: use_existing_vpc}]
       default: create_new_vpc
     azs:
       title: Availability Zones
@@ -29,12 +30,17 @@ spec:
       x-ui-immutable: true
       x-ui-overrides-only: true
       x-ui-fetch-az: true
+      items:
+        type: string
     vpc_cidr:
       title: VPC CIDR
       description: CIDR block for the vpc
       x-ui-placeholder: e.g. 10.45.0.0/16
-      pattern: ^(?!10\.0\.0\.0\/16$)(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
-      x-ui-error-message: "The provided CIDR block is invalid. Ensure it is a valid private IP range in CIDR notation and note that the CIDR block 10.0.0.0/16 is not allowed."
+      pattern: 
+        ^(?!10\.0\.0\.0\/16$)(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      x-ui-error-message: "The provided CIDR block is invalid. Ensure it is a valid
+        private IP range in CIDR notation and note that the CIDR block 10.0.0.0/16
+        is not allowed."
       type: string
       x-ui-immutable: true
       x-ui-overrides-only: true
