--- a/modules/network/gcp_vpc/0.1/facets.yaml
+++ b/modules/network/gcp_vpc/0.1/facets.yaml
@@ -1,10 +1,13 @@
 intent: network
 flavor: gcp_vpc
-alias-flavors: [ "default" ]
+alias-flavors: ["default"]
 version: "0.1"
 description: Adds network - gcp vpc flavor
 clouds:
-  - gcp
+- gcp
+outputs:
+  default:
+    type: "@outputs/gcp_vpc"
 spec:
   title: network
   description: Specification of the network for gcp vpc flavor
@@ -16,9 +19,8 @@ spec:
       type: radio
       x-ui-immutable: true
       x-ui-overrides-only: true
-      enum: [{ label: Create New VPC, value: create_new_vpc },
-              { label: Use Existing VPC, value: use_existing_vpc },
-              { label: Shared VPC, value: shared_vpc }]
+      enum: [{label: Create New VPC, value: create_new_vpc}, {label: Use Existing
+            VPC, value: use_existing_vpc}, {label: Shared VPC, value: shared_vpc}]
       default: create_new_vpc
     azs:
       title: Availability Zones
@@ -28,12 +30,16 @@ spec:
       x-ui-immutable: true
       x-ui-overrides-only: true
       x-ui-fetch-az: true
+      items:
+        type: string
     vpc_cidr:
       title: VPC CIDR
       description: CIDR block for the vpc
       x-ui-placeholder: e.g. 10.45.0.0/16
-      pattern: ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
-      x-ui-error-message: The provided CIDR block is invalid. Please ensure it is a valid private IP range in CIDR notation
+      pattern: 
+        ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      x-ui-error-message: The provided CIDR block is invalid. Please ensure it is
+        a valid private IP range in CIDR notation
       type: string
       x-ui-immutable: true
       x-ui-overrides-only: true
@@ -69,8 +75,10 @@ spec:
       description: Name of the secondary range for pods in the host project's VPC
       type: string
       x-ui-placeholder: e.g. 10.45.0.0/16
-      pattern: ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
-      x-ui-error-message: The provided CIDR block is invalid. Please ensure it is a valid private IP range in CIDR notation
+      pattern: 
+        ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      x-ui-error-message: The provided CIDR block is invalid. Please ensure it is
+        a valid private IP range in CIDR notation
       x-ui-immutable: true
       x-ui-overrides-only: true
       x-ui-visible-if:
@@ -78,7 +86,8 @@ spec:
         values: ["shared_vpc"]
     host_project_services_secondary_range_name:
       title: Host Project Services Secondary Range Name
-      description: Name of the secondary range for services in the host project's VPC
+      description: Name of the secondary range for services in the host project's
+        VPC
       type: string
       x-ui-immutable: true
       x-ui-overrides-only: true
@@ -87,18 +96,21 @@ spec:
         values: ["shared_vpc"]
     host_project_services_secondary_ip_range:
       title: Host Project Services Secondary IP Range
-      description: CIDR block for the secondary IP range of services in the host project's VPC
+      description: CIDR block for the secondary IP range of services in the host project's
+        VPC
       type: string
       x-ui-placeholder: e.g. 10.45.0.0/16
-      pattern: ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
-      x-ui-error-message: The provided CIDR block is invalid. Please ensure it is a valid private IP range in CIDR notation
+      pattern: 
+        ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      x-ui-error-message: The provided CIDR block is invalid. Please ensure it is
+        a valid private IP range in CIDR notation
       x-ui-immutable: true
       x-ui-overrides-only: true
       x-ui-visible-if:
         field: spec.choose_vpc_type
         values: ["shared_vpc"]
     host_project_allocatable_ip_range:
-      title: Host Project Allocatable IP Range 
+      title: Host Project Allocatable IP Range
       description: Range of IPs allocatable within the host project's VPC
       type: string
       x-ui-immutable: true
@@ -129,8 +141,10 @@ spec:
       description: CIDR block for the host project's subnet IP range
       type: string
       x-ui-placeholder: e.g.10.45.0.0/16
-      pattern: ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
-      x-ui-error-message: The provided CIDR block is invalid. Please ensure it is a valid private IP range in CIDR notation
+      pattern: 
+        ^(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      x-ui-error-message: The provided CIDR block is invalid. Please ensure it is
+        a valid private IP range in CIDR notation
       x-ui-immutable: true
       x-ui-overrides-only: true
       x-ui-visible-if:
@@ -156,7 +170,8 @@ spec:
         values: ["shared_vpc"]
     host_project_google_service_id:
       title: Host Project Google Service ID
-      description: Identifier for the Google service associated with the host project's VPC
+      description: Identifier for the Google service associated with the host project's
+        VPC
       type: string
       x-ui-immutable: true
       x-ui-overrides-only: true
@@ -172,8 +187,16 @@ spec:
       x-ui-visible-if:
         field: spec.choose_vpc_type
         values: ["shared_vpc"]
-  required: [ vnet_name, host_project_id, host_project_pods_secondary_range_name, host_project_pods_secondary_ip_range, host_project_services_secondary_range_name, host_project_services_secondary_ip_range, host_project_allocatable_ip_range,  host_project_subnet_id, host_project_subnet_name, host_project_subnet_ip_range, host_project_vpc_id, host_project_vpc_name, host_project_google_service_id, host_project_google_service_name, azs, vpc_cidr ]
-  x-ui-order: [ choose_vpc_type, vnet_name, host_project_id, host_project_pods_secondary_range_name, host_project_pods_secondary_ip_range, host_project_services_secondary_range_name, host_project_services_secondary_ip_range, host_project_allocatable_ip_range,  host_project_subnet_id, host_project_subnet_name, host_project_subnet_ip_range, host_project_vpc_id, host_project_vpc_name, host_project_google_service_id, host_project_google_service_name, azs, vpc_cidr ]
+  required: [vnet_name, host_project_id, host_project_pods_secondary_range_name, host_project_pods_secondary_ip_range,
+    host_project_services_secondary_range_name, host_project_services_secondary_ip_range,
+    host_project_allocatable_ip_range, host_project_subnet_id, host_project_subnet_name,
+    host_project_subnet_ip_range, host_project_vpc_id, host_project_vpc_name, host_project_google_service_id,
+    host_project_google_service_name, azs, vpc_cidr]
+  x-ui-order: [choose_vpc_type, vnet_name, host_project_id, host_project_pods_secondary_range_name,
+    host_project_pods_secondary_ip_range, host_project_services_secondary_range_name,
+    host_project_services_secondary_ip_range, host_project_allocatable_ip_range, host_project_subnet_id,
+    host_project_subnet_name, host_project_subnet_ip_range, host_project_vpc_id, host_project_vpc_name,
+    host_project_google_service_id, host_project_google_service_name, azs, vpc_cidr]
 sample:
   kind: network
   flavor: gcp_vpc
