--- a/modules/postgres_user/default/0.3/facets.yaml
+++ b/modules/postgres_user/default/0.3/facets.yaml
@@ -3,10 +3,10 @@ flavor: default
 version: "0.3"
 description: Adds postgres_user - default flavor
 clouds:
-  - aws
-  - gcp
-  - azure
-  - kubernetes
+- aws
+- gcp
+- azure
+- kubernetes
 lifecycle: ENVIRONMENT
 input_type: instance
 composition: {}
@@ -14,7 +14,8 @@ inputs:
   kubernetes_details:
     type: "@output/kubernetes"
     displayName: Kubernetes Cluster
-    description: Details of Kubernetes where the CRD for managing postgresql user will be created
+    description: Details of Kubernetes where the CRD for managing postgresql user
+      will be created
     optional: false
     default:
       resource_type: kubernetes_cluster
@@ -22,7 +23,8 @@ inputs:
   database_operator_details:
     type: "@output/database_operator"
     displayName: Database Operator
-    description: Details of database operator which will be responsible to create postgres users
+    description: Details of database operator which will be responsible to create
+      postgres users
     optional: false
   postgres_details:
     type: "@output/postgres"
@@ -51,7 +53,8 @@ spec:
           properties:
             connection_limit:
               title: Connection Limit
-              description: Maximum number of connections that can be made to the database using this role
+              description: Maximum number of connections that can be made to the database
+                using this role
               type: integer
               minimum: 1
             privileges:
@@ -100,29 +103,31 @@ spec:
           type: string
         grant_statements:
           title: Grant Statements
-          description: Map of PostgreSQL database to grant queries that will be executed to grant permissions after role creation on particular database
+          description: Map of PostgreSQL database to grant queries that will be executed
+            to grant permissions after role creation on particular database
           type: object
           minProperties: 1
           patternProperties:
-            keyPattern: "^[a-zA-Z0-9_-]+$"
-            type: object
-            title: Grant Statements Key
-            description: Grant Statement Object
-            minProperties: 1
-            properties:
-              database:
-                type: string
-                title: Database
-                description: Name of the database to grant permissions
-                pattern: "^[a-zA-Z0-9_-]+$"
-                x-ui-unique: true
-              statements:
-                type: array
-                title: Statements
-                description: List of grant statements to be executed
-                items:
+            "^[a-zA-Z0-9_-]+$":
+              type: object
+              title: Grant Statements Key
+              description: Grant Statement Object
+              minProperties: 1
+              properties:
+                database:
                   type: string
-                minItems: 1
+                  title: Database
+                  description: Name of the database to grant permissions
+                  pattern: "^[a-zA-Z0-9_-]+$"
+                  x-ui-unique: true
+                statements:
+                  type: array
+                  title: Statements
+                  description: List of grant statements to be executed
+                  items:
+                    type: string
+                  minItems: 1
+                  x-ui-override-disable: true
         connection_details:
           title: Connection Details
           description: Connection details for the postgres master user
@@ -139,7 +144,7 @@ spec:
               type: string
               default: disable
       required:
-        - grant_statements
+      - grant_statements
 sample:
   kind: postgres_user
   flavor: default
@@ -163,23 +168,25 @@ sample:
         grant_statement_1:
           database: test_db
           statements:
-            - 'GRANT CONNECT ON DATABASE postgres TO "test-role";'
-            - 'GRANT USAGE ON SCHEMA public TO "test-role";'
-            - 'GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA public TO "test-role";'
-            - 'ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON TABLES TO "test-role";'
-            - 'GRANT USAGE ON ALL SEQUENCES IN SCHEMA public TO "test-role";'
-            - 'GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA public TO "test-role";'
-            - 'ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT USAGE ON SEQUENCES TO "test-role";'
+          - 'GRANT CONNECT ON DATABASE postgres TO "test-role";'
+          - 'GRANT USAGE ON SCHEMA public TO "test-role";'
+          - 'GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA public TO "test-role";'
+          - 'ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON TABLES TO "test-role";'
+          - 'GRANT USAGE ON ALL SEQUENCES IN SCHEMA public TO "test-role";'
+          - 'GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA public TO "test-role";'
+          - 'ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT USAGE ON SEQUENCES TO
+            "test-role";'
         grant_statement_2:
           database: test_db_2
           statements:
-            - 'GRANT CONNECT ON DATABASE postgres TO "test-role";'
-            - 'GRANT USAGE ON SCHEMA public TO "test-role";'
-            - 'GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA public TO "test-role";'
-            - 'ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON TABLES TO "test-role";'
-            - 'GRANT USAGE ON ALL SEQUENCES IN SCHEMA public TO "test-role";'
-            - 'GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA public TO "test-role";'
-            - 'ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT USAGE ON SEQUENCES TO "test-role";'
+          - 'GRANT CONNECT ON DATABASE postgres TO "test-role";'
+          - 'GRANT USAGE ON SCHEMA public TO "test-role";'
+          - 'GRANT ALL PRIVILEGES ON ALL TABLES IN SCHEMA public TO "test-role";'
+          - 'ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT ALL ON TABLES TO "test-role";'
+          - 'GRANT USAGE ON ALL SEQUENCES IN SCHEMA public TO "test-role";'
+          - 'GRANT ALL PRIVILEGES ON ALL SEQUENCES IN SCHEMA public TO "test-role";'
+          - 'ALTER DEFAULT PRIVILEGES IN SCHEMA public GRANT USAGE ON SEQUENCES TO
+            "test-role";'
       connection_details:
         default_database: postgres
         sslmode: disable
