disabled override only

--- a/modules/ingress/nginx_k8s_native/0.2/facets.yaml
+++ b/modules/ingress/nginx_k8s_native/0.2/facets.yaml
@@ -129,7 +129,7 @@ spec:
     rules:
       title: Ingress Rules
       description: Objects of all ingress rules
-      x-ui-override-disable: true
+      # x-ui-override-disable: true
       type: object
       patternProperties:
         ^[a-zA-Z0-9_.-]*$:
