--- a/modules/cloud_account/impersonate/1.0/facets.yaml
+++ b/modules/cloud_account/impersonate/1.0/facets.yaml
@@ -23,9 +23,54 @@ spec:
       pattern: ^[a-zA-Z0-9][a-zA-Z0-9-]{4,28}[a-zA-Z0-9]@[a-z][a-z0-9-]{4,28}[a-z0-9]\.iam\.gserviceaccount\.com$
       x-ui-error: Invalid service account format. Please enter a valid service account
       x-ui-overrides-only: true
+    region:
+      title: Region
+      type: string
+      description: The region in context to create google cloud resources
+      x-ui-placeholder: us-central1
+      x-ui-overrides-only: true
+      enum:
+      - "asia-east1"
+      - "asia-east2"
+      - "asia-northeast1"
+      - "asia-northeast2"
+      - "asia-northeast3"
+      - "asia-south1"
+      - "asia-south2"
+      - "asia-southeast1"
+      - "asia-southeast2"
+      - "australia-southeast1"
+      - "australia-southeast2"
+      - "europe-central2"
+      - "europe-north1"
+      - "europe-southwest1"
+      - "europe-west1"
+      - "europe-west2"
+      - "europe-west3"
+      - "europe-west4"
+      - "europe-west6"
+      - "europe-west8"
+      - "europe-west9"
+      - "europe-west12"
+      - "me-central1"
+      - "me-west1"
+      - "northamerica-northeast1"
+      - "northamerica-northeast2"
+      - "southamerica-east1"
+      - "southamerica-east2"
+      - "us-central1"
+      - "us-east1"
+      - "us-east4"
+      - "us-east5"
+      - "us-south1"
+      - "us-west1"
+      - "us-west2"
+      - "us-west3"
+      - "us-west4"
   required:
   - service_account
   - project
+  - region
 outputs:
   default:
     type: '@outputs/cloud_account'
@@ -36,18 +81,21 @@ outputs:
         attributes:
           project: attributes.project
           impersonate_service_account: attributes.service_account
+          region: attributes.region
       google:
         source: hashicorp/google
         version: 6.23.0
         attributes:
           project: attributes.project
           impersonate_service_account: attributes.service_account
+          region: attributes.region
       google5:
         source: hashicorp/google5
         version: 5.32.0
         attributes:
           project: attributes.project
           impersonate_service_account: attributes.service_account
+          region: attributes.region
 sample:
   kind: cloud_account
   flavor: impersonate
@@ -56,3 +104,4 @@ sample:
   spec:
     project: <project-id>
     service_account: terraform@<project-id>.iam.gserviceaccount.com
+    region: us-central1
